<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_login"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <EditText
        android:id="@+id/user_id"
        android:layout_width="@dimen/input_box_width"
        android:layout_height="@dimen/input_box_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/white_input_box"
        android:hint="@string/load_input_name"
        android:gravity="center_vertical"
        android:textSize="@dimen/input_size_32"
        android:inputType="none"/>

    <EditText
        android:id="@+id/user_psw"
        android:layout_width="@dimen/input_box_width"
        android:layout_height="@dimen/input_box_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/white_input_box"
        android:hint="@string/load_input_password"
        android:gravity="center_vertical"
        android:textSize="@dimen/input_size_32"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="@dimen/load_btn_width"
        android:layout_height="@dimen/load_btn_height"
        android:text="@string/signin"
        android:gravity="center"
        android:textSize="@dimen/input_size_32"
        android:background="@drawable/load_btn"/>
    <Button
        android:id="@+id/btn_load"
        android:layout_width="@dimen/load_btn_width"
        android:layout_height="@dimen/load_btn_height"
        android:text="@string/load"
        android:gravity="center"
        android:textSize="@dimen/input_size_32"
        android:background="@drawable/load_btn"/>
</LinearLayout>
</LinearLayout>