<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/view_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/view_padding"
        android:paddingLeft="@dimen/view_padding"
        android:paddingRight="@dimen/view_padding"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_normal"
                android:text="@string/user_count"/>
            <EditText
                android:id="@+id/user_count"
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:textSize="@dimen/font_size_normal"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/white_input_box"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_normal"
                android:text="@string/phone_number"/>
            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:textSize="@dimen/font_size_normal"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/white_input_box"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_normal"
                android:text="@string/mail_number"/>
            <EditText
                android:id="@+id/mail_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:textSize="@dimen/font_size_normal"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/white_input_box"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_normal"
                android:text="@string/qq_number"/>
            <EditText
                android:id="@+id/qq_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:textSize="@dimen/font_size_normal"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/white_input_box"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_normal"
                android:text="@string/weixin_number"/>
            <EditText
                android:id="@+id/weixin_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:textSize="@dimen/font_size_normal"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/white_input_box"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/merge_contact"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/line_height"
            android:layout_marginTop="@dimen/view_padding"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical">
            <CheckBox android:id="@+id/merge_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_normal"
                android:text="@string/merge_contact"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
