<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myXML="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include
             layout="@layout/view_title"/>
        <com.farina.farinaimagelib.ViaImageView
            android:id="@+id/user_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            myXML:shapeType="2"
            myXML:borderWidth="1dip"
            myXML:borderColor="#ff0000"
            android:src="@mipmap/user_img"
            />
        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:gravity="center_horizontal"
            android:textSize="@dimen/font_size_normal"
            android:layout_marginTop="10dp"
            android:text="name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/view_padding">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@color/division_line_color"/>
        <RelativeLayout
            android:id="@+id/binding"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:paddingLeft="@dimen/view_padding"
            android:paddingRight="@dimen/view_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_normal"
                android:text="@string/binding_user_info"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icn_next"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@color/division_line_color"/>
        <RelativeLayout
            android:id="@+id/change_pic"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:paddingLeft="@dimen/view_padding"
            android:paddingRight="@dimen/view_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_normal"
                android:text="@string/change_pic"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icn_next"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@color/division_line_color"/>
        <RelativeLayout
            android:id="@+id/other_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:paddingLeft="@dimen/view_padding"
            android:paddingRight="@dimen/view_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_normal"
                android:text="@string/other_style"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icn_next"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@color/division_line_color"/>
    </LinearLayout>
</RelativeLayout>
